--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/show_long_text_activity"
-            android:onClick="startNewActivity"/>
+            android:onClick="startNewActivity"
+            android:background="@drawable/rounded_butoon"
+            android:textColor="#2A1F42"
+            android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_startLifecycleActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Lifecycle Activity"
+            android:onClick="startNewActivity"
+            android:background="@drawable/rounded_butoon"
+            android:textColor="#2A1F42"
+            android:textAllCaps="false"/>
     </LinearLayout>
 </ScrollView>
