--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,15 @@
             android:background="@drawable/rounded_butoon"
             android:textColor="#2A1F42"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_startActivityResul"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Result Activity"
+            android:onClick="startNewActivity"
+            android:background="@drawable/rounded_butoon"
+            android:textColor="#2A1F42"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
