--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
+    <style name="StyledActivity" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#880e4f</item>
+        <item name="colorPrimaryDark">#560027</item>
+        <item name="android:textColorPrimary">#883997</item>
+        <item name="colorControlNormal">#d32f2f</item>
+        <item name="colorAccent">#ba68c8</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+    </style>
+    <style name="TextViewStyle">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#880e4f</item>
+        <item name="android:font"></item>
+    </style>
 </resources>
