--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,10 +17,10 @@
         <item name="colorAccent">#ba68c8</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:textAllCaps">false</item>
     </style>
     <style name="TextViewStyle">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#880e4f</item>
-        <item name="android:font"></item>
     </style>
 </resources>
