--- a/app/src/main/res/layout/activity_views_1.xml
+++ b/app/src/main/res/layout/activity_views_1.xml
@@ -21,22 +21,22 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="140dp"
+        android:layout_height="160dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:src="@drawable/ic_user_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:src="@drawable/ic_user_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="249dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Name"
+        android:inputType="textPersonName"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -44,13 +44,9 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="239dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -124,6 +120,7 @@
         app:layout_constraintTop_toTopOf="@+id/toggleButton" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="150dp"
         android:layout_height="92dp"
         android:layout_marginStart="8dp"
@@ -171,8 +168,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:entries="@array/cities_list"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/rg_gender"
-        android:entries="@array/cities_list"/>
+        app:layout_constraintTop_toBottomOf="@+id/rg_gender" />
 
 </android.support.constraint.ConstraintLayout>
