--- a/app/src/main/res/layout/activity_views_1.xml
+++ b/app/src/main/res/layout/activity_views_1.xml
@@ -74,7 +74,8 @@
         android:textOff="Yes"
         android:textOn="No"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        android:onClick="showToastOfText"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -171,5 +172,15 @@
         android:entries="@array/cities_list"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/rg_gender" />
+
+    <Spinner
+        android:id="@+id/spinner_custom"
+        android:layout_width="379dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
 </android.support.constraint.ConstraintLayout>
