--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,18 @@
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
     <style name="TextViewStyle">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#880e4f</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
