--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,5 +108,16 @@
             android:background="@drawable/rounded_butoon"
             android:textColor="#FFFFFF"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_startTabsActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Tabs Activity"
+            android:onClick="startNewActivity"
+            android:background="@drawable/rounded_butoon"
+            android:textColor="#FFFFFF"
+            android:textAllCaps="false"/>
+
+
     </LinearLayout>
 </ScrollView>
