--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,14 @@
             android:background="@drawable/rounded_butoon"
             android:textColor="#FFFFFF"
             android:textAllCaps="false"/>
-
-
+        <Button
+            android:id="@+id/btn_startRecyclerViewActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start RecyclerView Activity"
+            android:onClick="startNewActivity"
+            android:background="@drawable/rounded_butoon"
+            android:textColor="#FFFFFF"
+            android:textAllCaps="false"/>
     </LinearLayout>
 </ScrollView>
