--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,5 +126,15 @@
             android:background="@drawable/rounded_butoon"
             android:textColor="#FFFFFF"
             android:textAllCaps="false"/>
+        <Button
+            android:id="@+id/btn_startLoadImagesActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Asynctask Asynctaskloader Activity"
+            android:onClick="startNewActivity"
+            android:background="@drawable/rounded_butoon"
+            android:textColor="#FFFFFF"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
