Update to latest version of android x and java 11 and also gradle

--- a/app/src/main/res/layout-land/employee_list.xml
+++ b/app/src/main/res/layout-land/employee_list.xml
@@ -18,7 +18,7 @@
 
     -->
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/employee_list"
         android:name="com.examples.android.employeeproject.EmployeeListFragment"
         android:layout_width="@dimen/item_width"
