--- a/app/src/main/res/layout/activity_form_check.xml
+++ b/app/src/main/res/layout/activity_form_check.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical"
             android:paddingLeft="20dp"
             android:paddingRight="20dp" >
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_input_layout_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -29,8 +29,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Name"/>
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_input_layout_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,8 +43,8 @@
                     android:ems="10"
                     android:inputType="textEmailAddress"
                     android:hint="Email" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_input_layout_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,8 +57,8 @@
                     android:ems="10"
                     android:inputType="textPassword"
                     android:hint="@string/hint_password" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_input_layout_dob"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,7 +71,7 @@
                     android:ems="10"
                     android:singleLine="true"
                     android:hint="@string/hint_dob"/>
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
