--- a/app/src/main/res/layout/activity_load_images_async_and_loader.xml
+++ b/app/src/main/res/layout/activity_load_images_async_and_loader.xml
@@ -57,9 +57,9 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:src="@drawable/image_placeholder" />
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        ></android.support.design.widget.TextInputLayout>
+        ></com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
